# libident

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  id_close.c  id_open.c  id_parse.c  id_query.c  ident-tester.c  ident.3  ident.c  ident.h  identtestd-xinetd  in.identtestd.8  lookup-tester.c  sockaddr.m4  support.c
debian/: changelog  control  copyright  libident-dev.install  libident.install  libident.shlibs  libident0.symbols  rules  watch
debian/patches/: 0001-PH-patch-id_parse.c.patch  0002-PH-fix-support.c.patch  series
